--- a/css/animation.css
+++ b/css/animation.css
@@ -33,20 +33,17 @@
 
  .grid-container2 {
    display: grid;
-   grid-template-rows: 2.5rem 2.5rem;
-   grid-template-columns: 2.5rem 20rem;
+   grid-template-rows: 2.5rem 2.5rem;   
    grid-gap: 8px;
  }
-
  .grid-item2 {
-   background: rgb(244, 240, 240);
-   text-align: center;
-   align-self: center;
-   border: rgb(253, 253, 253) 2px solid;
-   padding: 0.4rem;
-   border-radius: 5px;
-   box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
- }
+  background: rgb(244, 240, 240);
+  text-align: center;
+  align-self: center;
+  border: rgb(253, 253, 253) 2px solid;
+  box-shadow: -7px 6px 22px -8px rgba(0, 0, 0, 0.5);
+}
+ 
 
  .grid-item3 {
    background: rgb(244, 240, 240);
@@ -65,7 +62,7 @@
 
  .slide-contenedor {
    max-width: 100%;
-   max-height: 615px;
+   max-height: 320px;
    width: 100%;
    height: auto;
    position: relative;
@@ -115,6 +112,9 @@
    display: inline-block;
    margin-left: 3px;
  }
+ .miSlider{
+  transition: opacity 0.5s ease-in-out;
+}
 
  .active {
    background-color: #e74c3c;
@@ -122,16 +122,18 @@
 
  .fade {
    animation-name: fade;
-   animation-duration: 5s;
+   animation-duration: 4.5s;
  }
-
-
  @keyframes fade {
-   from {
-     opacity: .7;
-   }
-
-   to {
-     opacity: 1;
-   }
+   0% {
+     opacity: .5;    
+   }20% {
+     opacity: .8;
+   }50% {
+    opacity: .9;
+  }75% {
+    opacity: .95;
+  }100% {
+    opacity: 1;
+  }
  }
