--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,26 @@
 @import 'desktop.css';
 @import 'animation.css';
 @import 'form.css';
-@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;700&family=Playfair+Display:ital,wght@1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Scada:ital@1&display=swap');
+
 
 
 /* ROOT */
+html {
+    scroll-behavior: smooth;
+    
+}
+
 :root {
     --botones: #F3603B;
+    --cintas: #F3603B;
     --titulos: #232851;
     --parrafos: #B3B2B7;
-    --footer: #1E1E26;
-    --fondo-gris: #eeebe8;
+    --footerBack: #1E1E26;
+    --fondoBack: #eeebe8;
+    --fontTitulos: 'Montserrat', sans-serif;
+    --fontParrafos: 'Scada', sans-serif;
+    
 }
 
 /* MARGEN INICIAL + CONFIG. */
@@ -26,29 +36,55 @@
 
 
 /* CONFIGURACIONES GENERALES */
+
 body {
     background-color: rgb(251, 250, 249)
 }
-h3,
-h4 {
-    color: var(--titulos);
-}
+
 
 p {
     color: var(--parrafos);
+    font-family: var(--fontParrafos);
+    font-size: large;
 }
 
 button {
     cursor: pointer;
     background-color: var(--botones);
-    border-radius: 50px;
-    color: #FFFFFF;
-    border: var(--botones);
+    border-radius: 50px;    
+    border: var(--titulos);
     box-shadow: 1px 6px 10px rgba(29, 28, 28, 1);
+    font-size: 1.1rem;    
+    padding: 0.2rem 0.5rem;
+    
+}
+.go-acor, .phone800{
+    font-family: var(--fontTitulos);
+    color: var(--titulos);
+}
+.button{
+    color: var(--fondoBack);
+    font-family: var(--fontTitulos);
+    font-weight: 500;
+}
+li a{
+    font-family: var(--fontTitulos);
+    font-weight: 700;
 }
 
 ul {
     list-style-type: none;
+}
+footer{
+    background-color: var(--footerBack);
+}
+h2,h3,h4,.bt3{
+    font-family: var(--fontTitulos);
+    color: var(--titulos);
+}
+#status, #hours{
+    font-family: var(--fontTitulos);
+    font-weight: 700;
 }
 
 .notas {
@@ -63,7 +99,9 @@ ul {
     right: 30px;
     -webkit-text-stroke: 1.5px rgb(12, 12, 12);
 }
-
+.box4{
+    background-color: var(--cintas);
+}
 .wppContact i {
     color: #25D366;
 }
@@ -109,11 +147,7 @@ article .box {
 
 
 
-.box4 {
-    height: 14rem;
-    background: var(--botones);
-    margin: 0px;
-}
+
 
 
 
@@ -173,3 +207,15 @@ form h3 {
     font-size: 1.5rem;
 }
 
+
+.linea-separacion {
+    height: 1.7px;
+    width: 100%;
+    background: linear-gradient(to right, rgb(250, 249, 247) 0%, rgb(235, 233, 230) 20%, rgb(209, 204, 199) 50%, rgb(229, 226, 222) 80%, rgb(246, 245, 243) 100%);
+  }
+  .saltoSeparado{
+    padding: 2rem 0rem 0rem;
+  }
+      
+
+      
