--- a/css/desktop.css
+++ b/css/desktop.css
@@ -267,7 +267,22 @@
         font-weight: 900;
     }
 
-
+    .bt3 {
+        color: var(--botones);
+        padding: 15px 25px;
+        background-color: #FFFFFF;
+        box-shadow: 1px 6px 10px rgba(29, 28, 28, 1);
+    }
+    
+    .bt3 i {
+        padding: 0rem 1rem 0rem 0rem;
+    
+    }
+    .go-acor {
+        padding: 0rem .5rem;
+        font-size: 2rem;
+        font-weight: 700;
+    }
 
 
     .order-footer {
