--- a/css/faq-css.css
+++ b/css/faq-css.css
@@ -25,7 +25,12 @@ p {
     font-family: var(--fontParrafos);
     font-size: large;
 }
-
+a{
+    text-decoration: none;
+    font-family: var(--fontParrafos);
+    color:#F3603B;
+    font-weight: 500;
+}
 .faq-container {
     width: 80%;
     margin: 0 auto;
