--- a/css/desktop.css
+++ b/css/desktop.css
@@ -4,7 +4,7 @@
         background: linear-gradient(118deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 18%, rgba(251, 250, 249, 1) 27%, rgba(251, 250, 249, 1) 30%, rgba(251, 250, 249, 1) 34%, rgba(249, 242, 236, 1) 37%, rgba(241, 229, 217, 1) 45%, rgba(245, 227, 212, 1) 48%, rgba(252, 176, 69, 1) 62%, rgba(237, 128, 101, 1) 76%, rgba(243, 96, 59, 1) 98%);
     }
 
-    .hambur {
+    .hambur-desktop {
         display: none;
     }
 
