--- a/css/animation.css
+++ b/css/animation.css
@@ -8,7 +8,7 @@
  }
 
  .grid-item1 {
-   background: rgb(102, 102, 150);
+   background: #3D9FE0;
    text-align: center;
    align-self: center;
    border: rgb(255, 255, 255) 2px solid;
