--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@ html {
 }
 
 :root {
-    --botones: #F3603B;
-    --cintas: #F3603B;
+    --botones: #c2236e;
+    --cintas: #c2236e;
     --titulos: #232851;
     --parrafos: #B3B2B7;
     --footerBack: #1E1E26;
