--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,9 +1,10 @@
 @media (min-width: 800px) {
     header {
-        background: rgb(255, 255, 255);
-        background: linear-gradient(118deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 18%, rgba(251, 250, 249, 1) 27%, rgba(251, 250, 249, 1) 30%, rgba(251, 250, 249, 1) 34%, rgba(249, 242, 236, 1) 37%, rgba(241, 229, 217, 1) 45%, rgba(245, 227, 212, 1) 48%, rgba(252, 176, 69, 1) 62%, rgba(237, 128, 101, 1) 76%, rgba(243, 96, 59, 1) 98%);
-    }
-
+        background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 100%, rgba(194,35,110,1) 100%);}
+.close-menu{
+    display: none;
+}
     .hambur-desktop {
         display: none;
     }
@@ -40,8 +41,8 @@
     }
 
     .desktop-menu a {
-        border-radius: 0.8rem;
-        border: #e45e5e 0.1px solid;
+        border-radius: 0.5rem;
+        border: #8e1a77 0.1px solid;
         position: relative;
         display: inline-block;
         padding: 0.7rem 1rem;
@@ -59,7 +60,7 @@
         justify-content: space-between;
     }
 
-    .desktop-menu .navcolor2 {
+    /* .desktop-menu .navcolor2 {
         background: rgb(245, 227, 212);
         background: linear-gradient(90deg, rgba(245, 227, 212, 1) 0%, rgba(252, 176, 69, 1) 46%);
     }
@@ -76,11 +77,17 @@
 
     .desktop-menu .navcolor5 {
         background: rgba(243, 96, 59, 1)
+    } */
+    .desktop-menu a{
+        color: #FFFFFF;
+        background-color: var(--botones);
+        box-shadow: 0px 4px 8px rgba(175, 76, 52, 0.5);
+
     }
 
     .desktop-menu a:hover {
         color: white;
-        box-shadow: 0px 4px 8px rgba(175, 76, 52, 0.5);
+        box-shadow: inset 3px 5px 9px -1px rgb(70, 16, 7);
     }
 
     .btton {
