--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,7 +1,10 @@
 @media (min-width: 800px) {
     header {
-        background: rgb(255,255,255);
-background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 100%, rgba(194,35,110,1) 100%);}
+        /* background: rgb(255,255,255);
+background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 100%, rgba(194,35,110,1) 100%); */
+background-color: var(--botones);
+}
+
 .close-menu{
     display: none;
 }
@@ -39,10 +42,20 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         height: 11vh;
         width: 15vw;
     }
-
+    
+    .program-title {
+        font-family: var(--fontParrafos);
+        font-style: italic;
+        text-align: center; 
+        margin-bottom: 10px; 
+        font-size: 1.3em; /* Tamaño de la fuente */
+        color: rgb(255, 255, 255); /* Color de la fuente */
+    }
+    
     .desktop-menu a {
-        border-radius: 0.5rem;
-        border: #8e1a77 0.1px solid;
+        /* border-radius: 0.5rem; */
+        font-family: var(--fontParrafos);
+        border: white 0.05px solid;
         position: relative;
         display: inline-block;
         padding: 0.7rem 1rem;
@@ -53,7 +66,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
     }
 
     .desktop-menu {
-        padding: 2rem 0rem;
+        /* padding: 2rem 0rem; */
         gap: 0.8rem;
         display: flex;
         flex-direction: row;
@@ -81,7 +94,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
     .desktop-menu a{
         color: #FFFFFF;
         background-color: var(--botones);
-        box-shadow: 0px 4px 8px rgba(175, 76, 52, 0.5);
+        box-shadow: 0px 4px 8px rgba(188, 38, 148, 0.5);
 
     }
 
