--- a/css/animation.css
+++ b/css/animation.css
@@ -67,7 +67,9 @@
    height: auto;
    position: relative;
    overflow: hidden;
-   background-color: black;
+   background-color: rgb(241, 235, 235);
+   box-shadow: -7px 10px 22px -8px rgba(0, 0, 0, 0.9);
+   padding: 1.5rem 0rem;
 
  }
 
@@ -83,7 +85,8 @@
  }
 
  .direcciones a {
-   color: rgb(54, 53, 53);
+  background-color: rgba(0, 0, 0, .5);
+   color: rgb(255, 255, 255);
    display: inline-block;
    padding: 20px;
    text-decoration: none;
@@ -126,13 +129,13 @@
  }
  @keyframes fade {
    0% {
-     opacity: .5;    
+     opacity: .8;    
    }20% {
-     opacity: .8;
+     opacity: .9;
    }50% {
-    opacity: .9;
+    opacity: 1;
   }75% {
-    opacity: .95;
+    opacity: 1;
   }100% {
     opacity: 1;
   }
