--- a/css/desktop.css
+++ b/css/desktop.css
@@ -109,12 +109,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
     .btton {
         padding: 13px 15px;
     }
-
-    .graf img {
-        margin: 0 3rem 0 0;
-        box-shadow: -7px 20px 22px -8px rgba(0, 0, 0, 0.9);
-
-    }
+    
 
     .title {
         padding: 1.25rem;
@@ -132,12 +127,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         top: 3rem;
     }
 
-    .box h4 {
-        padding: 0rem 6rem 1rem 2.8rem;
-        font-size: larger;
-        text-align: center;
-
-    }
+    
 
     section {
         display: flex;
@@ -148,7 +138,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         justify-content: center;
         justify-content: space-between;
     }
-
+/* section */
     .column1 {
         /* margin: 3rem 0rem; */
         padding: 40px;
@@ -156,7 +146,27 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         flex-direction: row-reverse;
         justify-content: space-around;
     }
+    /* imagen */
+    .graf-info {        
+        height: 33rem;
+        width: 150rem;
+        margin: 1rem 3rem;
+        box-shadow: -7px 20px 22px -8px rgba(0, 0, 0, 0.9);
+    }
+    .graf-info img {
+        width: 100%;
+        height: 100%;
+    }
+    .start-info{
 
+    }
+    .orderContr {
+        padding: 0rem 4rem 1rem 4rem;
+        font-size: larger;
+        text-align: left;
+    }
+    
+/* info */
     .cards-info {
         width: 30%;
         border-radius: 1rem;
@@ -243,9 +253,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         font-size: large;
     }
 
-    .orderContr {
-        text-align: left;
-    }
+    
 
     .comentarios {
         display: flex;
