--- a/css/faq-css.css
+++ b/css/faq-css.css
@@ -9,8 +9,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 1) 21%, rgba(245, 234, 234, 1) 41%, rgba(125, 117, 117, 1) 100%);
+    background: rgb(119,119,119);
+background: linear-gradient(0deg, rgba(119,119,119,1) 10%, rgba(228,227,227,1) 25%, rgba(247,246,246,1) 32%, rgba(255,255,255,1) 34%, rgba(255,255,255,1) 35%, rgba(210,86,144,1) 59%, rgba(194,35,110,1) 68%, rgba(194,35,110,1) 100%);
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@ p {
 a{
     text-decoration: none;
     font-family: var(--fontParrafos);
-    color:#F3603B;
+    color:#c2236e;
     font-weight: 500;
 }
 .faq-container {
@@ -69,14 +69,14 @@ a{
     color: #F9F9F9;
     text-decoration: none;
     border-radius: 10px;
-    background-color: #F3603B;
+    background-color: #c2236e;
     padding: .3rem .8rem;
     box-shadow: 3px 4px 6px -1px rgba(0, 0, 0, 1);
 }
 
 .back-button a:hover {
     color: white;
-    background-color: #f3603b;
+    background-color: #c2236e;
     box-shadow: inset 3px 5px 9px -1px rgb(70, 16, 7);
 }
 
