--- a/css/animation.css
+++ b/css/animation.css
@@ -61,16 +61,19 @@
 
  .slide-contenedor {
    max-width: 100%;
-   max-height: 340px;
+   max-height: 400px;
    width: 100%;
    height: auto;
    position: relative;
    overflow: hidden;
-   background-color: rgb(241, 235, 235);
+   background-color: rgb(39, 36, 36);
    box-shadow: -7px 10px 22px -8px rgba(0, 0, 0, 0.9);
-   padding: 1.5rem 0rem;
+   margin: 1.5rem 0rem;
  }
+/* AJUSTANDO IMAGEN */
 
+
+/* --------------- */
  .direcciones {
    width: 100%;
    height: 100%;
