--- a/css/desktop.css
+++ b/css/desktop.css
@@ -396,10 +396,7 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
 
     .miSlider img {
         width: 100%;
-        max-height: 100vh;
-        height: inherit;
-        object-fit: cover;
-        vertical-align: top;
+        max-height: 400px;        
         transition: 2s;
     }
 
