--- a/css/mobile.css
+++ b/css/mobile.css
@@ -203,10 +203,9 @@
         height: 100%;
         color: white;
         padding: 20px;
-        background: rgb(255, 255, 255);
-        background: rgb(255, 255, 255);
-        background: linear-gradient(151deg, rgba(255, 255, 255, 1) 7%, rgba(255, 255, 255, 1) 20%, rgba(210, 86, 144, 1) 43%, rgba(194, 35, 110, 1) 60%, rgba(194, 35, 110, 1) 100%);
-    }
+        background-color: var(--fondoBack);
+        box-shadow: inset 1px -2px 300px -85px rgba(0,0,0,0.75);
+        }
 
     .desktop-menu li {
         padding: 2rem 1rem;
@@ -233,6 +232,22 @@
             transform: translateX(0);
         }
     }
+    .mn-dsktop.show-menu {
+        display: block;
+        animation: slide-in 0.5s ease-out;
+        z-index: 9999;
+    }
+
+    @keyframes slide-in {
+        from {
+            transform: translateX(100%);
+        }
+
+        to {
+            transform: translateX(0);
+        }
+    }
+
 
     .close-menu {
         background-color: transparent;
@@ -241,7 +256,6 @@
 
     .close-menu:hover {
         box-shadow: inset 3px 5px 9px -1px rgb(70, 16, 7);
-
     }
 
     .close-menu i {
@@ -481,4 +495,12 @@
         position: relative;
         left: 1rem;
     }
+    
+    .miSlider img {
+        width: 100%;
+        height: 100%;
+        object-fit:cover;
+      }
+    
+     
 }
