--- a/css/desktop.css
+++ b/css/desktop.css
@@ -429,5 +429,16 @@ background: linear-gradient(90deg, rgba(255,255,255,1) 63%, rgba(212,62,133,1) 1
         align-items: center;
         justify-content: space-between;
     }
+    .program-title::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 5px;
+        border-bottom: 1px solid rgb(255, 255, 255, 0.3);
+        margin-bottom: 5px;
+    }
+
+    
+    
 
 }
