--- a/css/animation.css
+++ b/css/animation.css
@@ -86,7 +86,7 @@
  }
 
  .direcciones a {
-  background-color: rgba(0, 0, 0, .5);
+  /* background-color: rgba(0, 0, 0, .1); */
    color: rgb(255, 255, 255);
    display: inline-block;
    padding: 20px;
@@ -112,7 +112,7 @@
    height: 2px;
    width: 25px;
    margin: 0 2px;
-   background: #dcdde1;
+   background: rgba(162, 162, 162, 0.5);;
    display: inline-block;
    margin-left: 3px;
  }
